2007-09-07  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #473903

	* exchange-delegates.c: (email_look_up):
	* exchange-mail-send-options.c: (append_to_header):
	* exchange-delegates-user.c: (exchange_delegates_user_edit):
	Fixes serious compiler warnings.

2007-08-24  Srinivasa Ragavan  <sragavan@novell.com>

	* org-gnome-exchange-cal-subscription.xml: Fix for empty menu in the
	UI.

2007-08-20  Matthew Barnes  <mbarnes@redhat.com>

	* Makefile.am: Fix a distcheck error.

2007-08-16  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #466548

	* exchange-mail-send-options.c: (org_gnome_exchange_send_options):
	e_msg_composer_get_preferred_account can return NULL, so test for it.

2007-08-10  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #327977

	* exchange-account-setup.c: (owa_authenticate_user):
	Pass parent window to call of e2k_validate_user.

2007-07-31  Veerapuram Varadhan  <vvaradhan@novell.com>

	* exchange-delegates-user.c: (exchange_delegates_user_edit):
	Generate HTML content for permission-summary mail, instead of
	ascii-text content.  This is required to align strings in a table.

	Committing on behalf of Bharath Acharya <abharath@novell.com>
	
2007-07-30  Andre Klapper  <a9016009@gmx.de>

	* exchange-permissions-dialog.glade:
	remove "window1" string from translation

2007-07-30  Chenthill Palanisamy  <pchenthill@novell.com>

	* exchange-delegates-user.c: (map_to_full_role_name),
	(exchange_delegates_user_edit): Added the translation comments
	
	Committing on behalf of Bharath Acharya <abharath@novell.com>	

2007-07-26  Hiroyuki Ikezoe  <poincare@ikezoe.net>

	** Fix for bug #458511

	* exchange-delegates-user.c: (exchange_delegates_user_edit): each
	message is enclosed with double quotes line by line.

2007-07-12  Matthew Barnes  <mbarnes@redhat.com>

	* exchange-delegates-user.c:
	Fix a bunch of new implicit function declarations.

2007-07-09  Chenthill Palanisamy  <pchenthill@novell.com>

	reviewed by: Veerapuram Varadhan <vvaradhan@novell.com>